# ingot

./: CMakeLists.txt  README.md  TODO  TODO.md  compile.sh  compile_and_run_example.sh  example.ingot
src/: CMakeLists.txt  Error.hh  Scanner.hh  grammar.y  lexer.l  main.cc
src/ast/: AST.cc  AST.hh  CMakeLists.txt  Expression.cc  Expression.hh  Function.cc  Function.hh  FunctionCall.cc  FunctionCall.hh  FunctionDefinition.cc  FunctionDefinition.hh  FunctionPrototype.cc  FunctionPrototype.hh  FunctionType.cc  FunctionType.hh  Integer.cc  Integer.hh  Operator.cc  Operator.hh  String.cc  String.hh  Type.cc  Type.hh
src/codegen/: CMakeLists.txt  CodegenVisitor.cc  CodegenVisitor.hh  Generator.cc  Generator.hh  InsertPointGuard.hh  List.cc  List.hh  ListOperations.cc  ListOperations.hh  TypeContext.cc  TypeContext.hh
src/ingot/: CMakeLists.txt  README.md  main.cc
src/ingot/ast/: AST.cc  AST.hh  ArgumentReference.cc  ArgumentReference.hh  CMakeLists.txt  Expression.cc  Expression.hh  Function.cc  Function.hh  FunctionCall.cc  FunctionCall.hh  FunctionDefinition.cc  FunctionDefinition.hh  FunctionType.cc  FunctionType.hh  Integer.cc  Integer.hh  List.cc  List.hh  Node.cc  Node.hh  Operator.cc  Operator.hh  String.cc  String.hh  Ternary.cc  Ternary.hh  Type.cc  Type.hh
src/ingot/codegen/: CMakeLists.txt  CodegenVisitor.cc  CodegenVisitor.hh  Generator.cc  Generator.hh  InsertPointGuard.cc  ListOperations.cc  ListOperations.hh  TypeContext.cc  TypeContext.hh
src/ingot/parser/: CMakeLists.txt  Scanner.hh  SyntaxError.cc  SyntaxError.hh  grammar.y  lexer.l
src/ingot/semantics/: CMakeLists.txt  FunctionResolver.cc  FunctionResolver.hh  IdentifierResolver.cc  IdentifierResolver.hh  IntegerTypeResolver.cc  IntegerTypeResolver.hh  SemanticError.cc  SemanticError.hh  SemanticTree.cc  SemanticTree.hh  TypeResolver.cc  TypeResolver.hh
src/parser/: CMakeLists.txt  Scanner.hh  SyntaxError.cc  grammar.y  lexer.l
src/semantics/: CMakeLists.txt  FunctionResolver.cc  FunctionResolver.hh  SemanticError.cc  SemanticError.hh  SemanticTree.cc  SemanticTree.hh  TypeResolver.cc  TypeResolver.hh
